<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.mindscan.brightflux</groupId>
  <artifactId>BrightFlux-System</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
  
		<!-- External dependencies -->
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.8.5</version>
		</dependency>
  
  
		<!-- Internal dependencies -->
		<!-- BrightFlux-Core -->	
		<dependency>
			<groupId>de.mindscan.brightflux</groupId>
			<artifactId>BrightFlux-Core</artifactId>
			<version>0.0.1-SNAPSHOT</version>			
		</dependency>
		
		<!-- BrightFlux-Framework -->	
		<dependency>
			<groupId>de.mindscan.brightflux</groupId>
			<artifactId>BrightFlux-Framework</artifactId>
			<version>0.0.1-SNAPSHOT</version>			
		</dependency>
		
		
  
  
		<!-- Dependencies for the Unit Tests -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>5.7.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
		    <groupId>org.hamcrest</groupId>
		    <artifactId>hamcrest</artifactId>
		    <version>2.2</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-all</artifactId>
		    <version>1.10.19</version>
		    <scope>test</scope>
		</dependency>
  
  </dependencies>
  
  
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>